Made API out of SDK
