# backend/routes/AWS/cdk.js
@@ -1,31 +1,30 @@
 const express = require('express');
 const router = express.Router();
-const AWS = require('aws-sdk');
 const { create } = require('domain');
+const AWS = require('aws-sdk');
 require('aws-sdk/lib/maintenance_mode_message').suppress = true;
-
 const debug = false;
 
+const { BSON, EJSON, ObjectId } = require('bson');
+const { UserAWS } = require('../../models/UserAWSModel');
+const MongoClient = require('mongodb').MongoClient;
+const client = new MongoClient(process.env.MONGODB_URI);
+const collection = client.db("test").collection("useraws");
 
 
+// AWS Config
 AWS.config.update({
-    "accessKeyId": "AKIARLGFEM73OF2YSA4Q",
-    "secretAccessKey": "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",
+    "accessKeyId": "",
+    "secretAccessKey": "",
     "region": "ap-southeast-2"
-});
-
-AWS.config.getCredentials(function (err) {
+}); AWS.config.getCredentials(function (err) {
     if (err) console.log(err.stack); // credentials not loaded
     else {
         console.log("ROOT Access key:", AWS.config.credentials.accessKeyId);
     }
 });
 
-
-
-
-
-var iam = new AWS.IAM({apiVersion: '2010-05-08'});
+var iam = new AWS.IAM({ apiVersion: '2010-05-08' });
 
 
 // Create User
@@ -66,7 +65,7 @@ function createPolicy(username, rdsLink) {
             if (err) { // an error occurred  
                 if (debug) console.log(err, err.stack);
                 result.isError = true; result.message = 'Error creating IAM access key'; result.rawErr = err;
-                resolve(result); 
+                resolve(result);
             } else { // successful response
                 if (debug) console.log(data);
                 if (debug) console.log(`Access Key ID: ${data.AccessKey.AccessKeyId} \nSecret Access Key: ${data.AccessKey.SecretAccessKey} \nUser ID: ${data.AccessKey.UserName}`);
@@ -102,7 +101,7 @@ function createPolicy(username, rdsLink) {
             }
 
             iam.getUser(userparams, function (err, data) { // Check if user already exists
-                if (err && err.code === 'NoSuchEntity') {   
+                if (err && err.code === 'NoSuchEntity') {
 
                     iam.createUser(userparams, async function (err, data) {  // Create user
                         if (err) {
@@ -112,7 +111,7 @@ function createPolicy(username, rdsLink) {
                         } else {
                             if (debug) console.log("User Creation Success", data);
 
-                            
+
                             if (debug) console.log(`policyData: ${policyData}`)
 
                             const attachPolicyParams = {
@@ -132,7 +131,7 @@ function createPolicy(username, rdsLink) {
 
 
                             // Create Access Key
-                            createAccessKey(username).then(data => {resolve(data);}).catch(err => {if(debug) console.log(err);});
+                            createAccessKey(username).then(data => { resolve(data); }).catch(err => { if (debug) console.log(err); });
 
                         }
                     });
@@ -146,6 +145,7 @@ function createPolicy(username, rdsLink) {
         });
     });
 }
+
 
 // Manage User
 function listAllUsers() {
@@ -168,58 +168,86 @@ function listAllUsers() {
     return new Promise((resolve, reject) => {
         iam.deleteAccessKey(params, (err, data) => {
             if (err) {
-                if(debug) console.error('Error deleting access key:', err);
+                if (debug) console.error('Error deleting access key:', err);
                 resolve(err);
             } else {
-                if(debug) console.log('Access key deleted:', data);
+                if (debug) console.log('Access key deleted:', data);
                 resolve(data);
             }
         });
     });
 } function deleteUser(username, accessKeyId) {
     const sts = new AWS.STS();
+    let result = {
+        user: username,
+        accessKey: accessKeyId,
+        secretAccessKey: null,
+        isError: false,
+        message: null,
+        rawErr: null,
+    };
 
-    deleteAccessKey(username, accessKeyId).then(data => {
-        new Promise((resolve, reject) => {
-            sts.getCallerIdentity({}, (err, data) => {
-                if (err) {
-                    console.error('Error fetching account ID:', err);
+    return new Promise((resolve, reject) => {
+        deleteAccessKey(username, accessKeyId).then(data => {
+            new Promise((resolve, reject) => {
+                sts.getCallerIdentity({}, (err, data) => {
+                    if (err) {
+                        console.error('Error fetching account ID:', err);
+                        result.isError = true; result.message = 'Error fetching account ID'; result.rawErr = err;
+                        resolve(result);
+                    } else {
+                        console.log('AWS Account ID:', data.Account);
+                        resolve(data.Account);
+
+                    }
+                });
+            }).then(accountID => {
+
+                if (/^\d+$/.test(accountID)) {
+
+                    const Userparams = {
+                        UserName: username,
+                    };
+                    const policyParams = {
+                        PolicyArn: `arn:aws:iam::${accountID}:policy/${username}-policy`,
+                        UserName: username,
+                    };
+                    const policyDeleteParams = {
+                        PolicyArn: `arn:aws:iam::${accountID}:policy/${username}-policy`,
+                    };
+
+                    iam.detachUserPolicy(policyParams, (err, data) => {
+                        if (debug) console.log(`Policy '${policyParams.PolicyArn}' detached from IAM user '${policyParams.UserName}'`);
+
+                        iam.deletePolicy(policyDeleteParams, (err, data) => {
+                            if (err) {
+                                if (debug) console.error('Error deleting user policy:', err);
+                                result.isError = true; result.message = 'Error deleting user policy'; result.rawErr = err;
+                                resolve(result);
+                            } else {
+                                if (debug) console.log(`Policy '${policyDeleteParams.PolicyArn}' has been succesfully deleted`);
+
+                                iam.deleteUser(Userparams, (err, data) => {
+                                    if (err) {
+                                        if (debug) console.error('Error deleting IAM user:', err);
+                                        result.isError = true; result.message = 'Error deleting IAM user'; result.rawErr = err;
+                                        resolve(result);
+                                    } else {
+                                        if (debug) console.log(`User '${username}' deleted successfully`);
+                                    }
+                                });
+                            }
+                        });
+
+                        result.message = `User '${username}' and all related objects has been succesfully deleted`;
+                        resolve(result);
+
+                    });
                 } else {
-                    console.log('AWS Account ID:', data.Account);
-                    resolve(data.Account);
+                    result.isError = true; result.message = 'Error fetching account ID';
+                    resolve(result);
                 }
-            });
-        }).then(accountID => {
-    
-            const Userparams = {
-                UserName: username,
-            };
-            const policyParams = {
-                PolicyArn: `arn:aws:iam::${accountID}:policy/${username}-policy`,
-                UserName: username,
-            };
-            const policyDeleteParams = {
-                PolicyArn: `arn:aws:iam::${accountID}:policy/${username}-policy`,
-            };
-    
-            iam.detachUserPolicy(policyParams, (err, data) => {
-                if(debug) console.log(`Policy '${policyParams.PolicyArn}' detached from IAM user '${policyParams.UserName}'`);
-    
-                iam.deleteUser(Userparams, (err, data) => {
-                    if (err) {
-                        if(debug) console.error('Error deleting IAM user:', err);
-                    } else {
-                        if(debug) console.log(`User '${username}' deleted successfully`);
-                    }
-                });
-    
-                iam.deletePolicy(policyDeleteParams, (err, data) => {
-                    if (err) {
-                        if(debug) console.error('Error deleting user policy:', err);
-                    } else {
-                        if(debug) console.log(`Policy '${policyDeleteParams.PolicyArn}' has been succesfully deleted`);
-                    }
-                });
+
             });
         });
     });
@@ -234,22 +262,136 @@ function listAllUsers() {
 }
 
 
-async function main() {
-    // createFullUser('testuser0').then(data => {console.log(data);}).catch(err => {console.log(err);});
-    listAllUsers();
-    // createAccessKey('testuser0').then(data => {console.log(data);}).catch(err => {console.log(err);});
-    // deleteAccessKey('testuser1', 'AKIARLGFEM73OKISFA6P');
-    // deleteUser('testuser0', 'AKIARLGFEM73JCOM6UW6');
-    // issueNewAccessKey('testuser0', 'AKIARLGFEM73FEYNBETJ').then(data => {console.log(data);}).catch(err => {console.log(err);});
+router.get('/getAllUsers', async (req, res) => {
+    // #swagger.tags = ['CDK']
+    try {
+        const users = await UserAWS.find();
+        res.status(200).json(users);
+    } catch (err) {
+        res.status(500).json({ isError: true, message: 'Error fetching users', rawErr: err });
+    }
+});
+
+router.post('/getUserByEmail', async (req, res) => {
+    // #swagger.tags = ['CDK']
+    const { email } = req.body;
+    try {
+        let user = await UserAWS.find({ email: email });
+        if (user.length == 0) res.status(404).json({ isError: true, message: "User not found" });
+        else res.status(200).json(user);
+    } catch {
+        res.status(500).json({ isError: true, message: 'Error fetching user', rawErr: err });
+    }
+});
+
+
+
+// Requires username and rdsLink
+router.post('/create', async (req, res) => {
+    // #swagger.tags = ['CDK']
+    const { email, username, rdsLink } = req.body;
+    createFullUser(username).then(async data => {
+        if (data.isError) {
+            res.status(400).json(data);
+        } else {
+            // Save to database
+            const userAWS = new UserAWS({
+                email: req.body.email,
+                username: req.body.username,
+                accesskey: data.accessKey,
+                secretkey: data.secretAccessKey,
+            });
+
+            try {
+                const userInfo = await userAWS.save();
+                res.status(201).json(data);
+            } catch (err) {
+                res.status(400).json({ isError: true, message: 'Failed to save to DB', rawErr: err });
+            }
+
+        }
+    }).catch(err => {
+        res.status(500).json({ isError: true, message: 'Error creating user', rawErr: err });
+    });
+});
+
+router.delete('/delete', getUser, async (req, res) => {
+    // #swagger.tags = ['CDK']
+    const { username } = req.body;
+
+    let user = res.user[0];
+    if (user == null) res.status(404).json({ isError: true, message: "User not found" });
+    else {
+        let accesskey = user.accesskey;
+        collection.deleteOne(user, (err, result) => {
+            if (err) {
+                console.error(err);
+                res.status(500).json({ isError: true, message: "Failed to delete User" });
+            }
+
+            if (result.deletedCount === 0) {
+                res.status(404).json({ isError: true, message: "User not found" });
+            }
+
+            deleteUser(username, accesskey).then(async data => {
+                res.status(200).json(data)
+            }).catch(err => {
+                res.status(500).json({ isError: true, message: 'Error deleting user', rawErr: err });
+            });
+
+        });
+    }
+
+});
+
+router.patch('/replace', getUser, async (req, res) => {
+    // #swagger.tags = ['CDK']
+    const { username } = req.body;
+
+    let user = res.user[0];
+    if (user == null) res.status(404).json({ isError: true, message: "User not found" });
+    else {
+        let accesskey = user.accesskey;
+
+        issueNewAccessKey(username, accesskey).then(async data => {
+            if (data.isError) {
+                res.status(400).json(data);
+            } else {
+
+                collection.updateOne(res.user[0], { $set: { accesskey: data.accessKey, secretkey: data.secretAccessKey } }, (err, result) => {
+                    if (err) {
+                        console.log(err);
+                        res.status(500).json({ error: "Failed to update DB" });
+                    } else res.status(200).json(data);
+                });
+
+            }
+        }).catch(err => {
+            res.status(500).json({ isError: true, message: 'Error replacing access key', rawErr: err });
+        });
+    }
+});
+
+
+
+// Middleware setup
+async function getUser(req, res, next) {
+    let user;
+    const { username } = req.body;
+    try {
+        user = await UserAWS.find({ username: username });
+        if (user === null) return res.status(404).json({ isError: true, message: "User not found" });
+    } catch {
+        return res.status(500).json({ isError: true, message: 'Error fetching user', rawErr: err });
+    }
+
+    res.user = user;
+    next();
 }
 
-main();
 
 
-// router.get('/', (req, res) => {
-//     // #swagger.tags = ['CDK']
-//     res.status(200).send('Hello World (CDK)');
-// });
 
 
-// module.exports = router;
+
+module.exports = router;
